Bug 78363 - Rendering issues when client is dragged to below workspace
Summary: Rendering issues when client is dragged to below workspace
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-06 23:50 UTC by Anu Reddy
Modified: 2014-05-13 17:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Anu Reddy 2014-05-06 23:50:08 UTC
Steps to Reproduce:
1. Activate workspaces by un-commenting num-workspaces=6 in weston.ini
2. Launch Weston
3. Launch a client : weston-terminal
4. Drag the terminal below workspace (below screen)
4. Switch to below workspace via <mod> + <f2>
5. Observe terminal does not appear 
6. Move the mouse. Observe, the terminal appear and flicker when mouse is moved.

Software stack:
wayland (HEAD) 1.4.92-0-g4a4523f
drm (HEAD) libdrm-2.4.52-0-g46d451c
mesa (HEAD) remotes/origin/10.1-0-g340ebdb
libva (HEAD) libva-1.2.1-0-g88ed1eb
intel-driver (HEAD) 1.2.2-0-g121e70d
cairo (HEAD) heads/1.12-0-g59e2a93
libinput (HEAD) remotes/origin/HEAD-0-g97af5c3
weston (HEAD) 1.4.92-0-gd7d71e8
Comment 1 Kristian Høgsberg 2014-05-09 19:52:02 UTC
commit 9c6217e6dc16684953f309e8b64bafe727717b73
Author: Ander Conselvan de Oliveira <ander.conselvan.de.oliveira@intel.com>
Date:   Wed May 7 11:57:26 2014 +0300

    shell: Fix artifacts caused by workspace change animation
    
    Views that extend past the bottom of the output are still visible after
    the workspace animation ends but before its layer is hidden. When the
    layer was hidden, nothing would cause those regions to be repainted,
    leading to artifacts.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=78363


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.